--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,9 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <a><h4>Entertainment |</h4></a><a><h4>Business |</h4></a><a><h4>Tech |</h4></a>
+    </nav>
     <div class="main">
         <div class="row">
             <!--<div class="category">
