--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav>
-        <a><h4>Entertainment |</h4></a><a><h4>Business |</h4></a><a><h4>Tech |</h4></a>
+        <a><h4>| Politics</h4></a><a><h4>| Entertainment</h4></a><a><h4>| Business</h4></a><a><h4>| Tech</h4></a>
     </nav>
     <div class="main">
         <div class="row">
